.k8_manifest/keycloak-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: backend
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8090
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
  sessionAffinity: ClientIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: backend
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:15.1.0
          ports:
            - name: jgroups
              containerPort: 7600
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
