.k8_manifest/ingress-keycloak-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "X-Frame-Options: ALLOWALL";
      #      more_set_headers  "Content-Security-Policy "default-src *  data: blob: filesystem: about: ws: wss: 'unsafe-inline' 'unsafe-eval' 'unsafe-dynamic'; script-src * data: blob: 'unsafe-inline' 'unsafe-eval'; connect-src * data: blob: 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src * data: blob: ; style-src * data: blob: 'unsafe-inline'; font-src * data: blob: 'unsafe-inline';"
      #      more_set_headers "X-Xss-Protection: 1; mode=block";
      #      more_set_headers "X-Content-Type-Options: nosniff";
      #      more_clear_headers "Cache-Control";
      #      more_set_headers "Cache-Control: must-revalidate";
      #      proxy_hide_header Content-Security-Policy;
      #      proxy_hide_header "X-Frame-Options";
      #      proxy_hide_header "X-Frame-Options";
      #      proxy_set_header l5d-dst-override;
      # annotations:
      #   cert-manager.io/issuer: letsencrypt-nginx
spec:
  # tls:
  #   - hosts:
  #     - quote.starter-kit.online
  #     secretName: letsencrypt-nginx-quote
  rules:
    - host: keycloak-dev.lctafrica.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8090
